fix: some updates to font colouring throughout for better contrast across light and dark mode

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -4,9 +4,9 @@
 
 @layer base {
   a {
-    @apply text-indigo-600; 
+    @apply text-indigo-500; 
     @apply dark:text-indigo-300;
-    @apply font-medium;
+    @apply font-bold;
   }
 
   h1 {
@@ -72,6 +72,8 @@
   
   blockquote p {
     @apply ml-4;
+    @apply text-gray-500;
+    @apply dark:text-gray-300
   }
 
   code {
